Fixed dark mode for about card

--- a/src/components/about-card/AboutCard.css
+++ b/src/components/about-card/AboutCard.css
@@ -9,6 +9,7 @@
     margin:40px auto;
     background-color:#F5F5F5;
     
+    padding-top:80px;
     border-radius: 20px;
     overflow:hidden;
     font-family: Inter;
@@ -39,7 +40,7 @@
     width:100%;
     padding-top:50%;
     overflow:hidden;
-
+    border-radius:20px;
 }
 
 .info {
